--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,12 @@
 }
 
 ::selection {
-    text-shadow: #D07D39 0 0 9.9px;
+    text-shadow: #96d039 0 0 9.9px;
     color: #FDAA66;
 }
 
 ::-moz-selection {
-    text-shadow: #D07D39 0 0 9.9px;
+    text-shadow: #96d039 0 0 9.9px;
     color: #FDAA66;
 }
 
@@ -17,15 +17,15 @@ html {
 }
 
 body {
-    font-family: 'Lato', Arial, sans-serif;
-    color: #a5a5a5;
-    background-color: #333333;
+    font-family: 'Roboto', Arial, sans-serif;
+    color: #b2b2b2;
+    background-color: #232741;
 }
 
 hr {
     height: .2rem;
     color: #a5a5a5;
-    background: #FD9845;
+    background: #fde145;
     border: none;
 }
 
@@ -185,7 +185,7 @@ h1 {
 
 .navbar-brand i {
     font-family: 'PT Mono', monospace;
-    color: #FD9845;
+    color: #fde145;
     font-size: 1.5em;
 }
 
@@ -232,11 +232,27 @@ h1 {
 
 /* ---- particles ---- */
 
+#particles-js canvas {
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
 #particles-js {
-    position: absolute;
     width: 100%;
     height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
 }
+
+
 
 /*========================*/
 
