--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ h1 {
 
 /* ---- particles ---- */
 
-##particles-js {
+#particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
