--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ h1 {
 }
 
 .bg-custom {
-    background-color: #F1F1F1;
+    background-color: #232741;
     position: absolute;
     width: 100%;
     z-index: 9998;
