--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
+.btn {
+    font-weight: 400;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    border-radius: 0
+}
+
+.btn-default {
+    border: 1px solid #fff;
+    color: #fff;
+    background-color: transparent
+}
+
+.btn-default:focus,.btn-default:hover {
+    border: 1px solid green;
+    outline: 0;
+    color: #fff;
+    background-color: green;
+}
+
 .navbar-light .navbar-nav .nav-link {
     color: rgba(255,255,0,0,3);
 }
