--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ th {
     margin-bottom: 10px;
 }
 
-#sponsors {
+#sponsors,#partners {
 	background-color: #0099ff;}
 #sponsors h2,
 #register h2 {
